- Fix some more cases of Ok -> OK

--- a/English.lproj/CommitSheet.xib
+++ b/English.lproj/CommitSheet.xib
@@ -25,8 +25,8 @@
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string>com.brandonwalkin.BWToolkit</string>
+			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.Metadata">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -56,7 +56,7 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
-				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
+				<string key="NSWindowContentMaxSize">{3.40282e+38, 3.40282e+38}</string>
 				<string key="NSWindowContentMinSize">{500, 400}</string>
 				<object class="NSView" key="NSWindowView" id="538557104">
 					<reference key="NSNextResponder"/>
@@ -72,7 +72,7 @@
 							<object class="NSButtonCell" key="NSCell" id="639013929">
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">134217728</int>
-								<string key="NSContents">Ok</string>
+								<string key="NSContents">OK</string>
 								<object class="NSFont" key="NSSupport" id="612085715">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">13</double>
@@ -109,7 +109,7 @@
 									<string key="NSColorName">controlColor</string>
 									<object class="NSColor" key="NSColor" id="27766402">
 										<int key="NSColorSpace">3</int>
-										<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+										<bytes key="NSWhite">MC42NjY2NjY2ODY1AA</bytes>
 									</object>
 								</object>
 								<object class="NSColor" key="NSTextColor" id="977823351">
@@ -382,7 +382,7 @@
 													<reference key="NSSuperview" ref="540829852"/>
 													<reference key="NSTarget" ref="540829852"/>
 													<string key="NSAction">_doScroller:</string>
-													<double key="NSPercent">0.92361110000000002</double>
+													<double key="NSPercent">0.9236111044883728</double>
 												</object>
 												<object class="NSScroller" id="545711408">
 													<reference key="NSNextResponder" ref="540829852"/>
@@ -393,7 +393,7 @@
 													<reference key="NSTarget" ref="540829852"/>
 													<string key="NSAction">_doScroller:</string>
 													<double key="NSCurValue">1</double>
-													<double key="NSPercent">0.94565220000000005</double>
+													<double key="NSPercent">0.94565218687057495</double>
 												</object>
 											</object>
 											<string key="NSFrameSize">{627, 164}</string>
@@ -466,7 +466,7 @@
 																						<reference key="NSSupport" ref="26"/>
 																						<object class="NSColor" key="NSBackgroundColor">
 																							<int key="NSColorSpace">3</int>
-																							<bytes key="NSWhite">MC4zMzMzMzI5OQA</bytes>
+																							<bytes key="NSWhite">MC4zMzMzMzI5ODU2AA</bytes>
 																						</object>
 																						<object class="NSColor" key="NSTextColor" id="731954987">
 																							<int key="NSColorSpace">6</int>
@@ -503,7 +503,7 @@
 																			<double key="NSIntercellSpacingHeight">2</double>
 																			<object class="NSColor" key="NSBackgroundColor">
 																				<int key="NSColorSpace">1</int>
-																				<bytes key="NSRGB">MC45Mzc2ODU0OSAwLjkzNzY4NTQ5IDAuODk2MDg0MzEAA</bytes>
+																				<bytes key="NSRGB">MC45Mzc2ODU0ODk3IDAuOTM3Njg1NDg5NyAwLjg5NjA4NDMwODYAA</bytes>
 																			</object>
 																			<object class="NSColor" key="NSGridColor">
 																				<int key="NSColorSpace">1</int>
@@ -535,7 +535,7 @@
 																	<reference key="NSSuperview" ref="816012238"/>
 																	<reference key="NSTarget" ref="816012238"/>
 																	<string key="NSAction">_doScroller:</string>
-																	<double key="NSPercent">0.9915254</double>
+																	<double key="NSPercent">0.99152541160583496</double>
 																</object>
 																<object class="NSScroller" id="355125531">
 																	<reference key="NSNextResponder" ref="816012238"/>
@@ -545,7 +545,7 @@
 																	<int key="NSsFlags">1</int>
 																	<reference key="NSTarget" ref="816012238"/>
 																	<string key="NSAction">_doScroller:</string>
-																	<double key="NSPercent">0.99688480000000002</double>
+																	<double key="NSPercent">0.99688482284545898</double>
 																</object>
 																<object class="NSClipView" id="446523391">
 																	<reference key="NSNextResponder" ref="816012238"/>
@@ -626,7 +626,7 @@
 																						<reference key="NSSupport" ref="26"/>
 																						<object class="NSColor" key="NSBackgroundColor">
 																							<int key="NSColorSpace">3</int>
-																							<bytes key="NSWhite">MC4zMzMzMzI5OQA</bytes>
+																							<bytes key="NSWhite">MC4zMzMzMzI5ODU2AA</bytes>
 																						</object>
 																						<reference key="NSTextColor" ref="731954987"/>
 																					</object>
@@ -649,7 +649,7 @@
 																			<double key="NSIntercellSpacingHeight">2</double>
 																			<object class="NSColor" key="NSBackgroundColor">
 																				<int key="NSColorSpace">1</int>
-																				<bytes key="NSRGB">MC45Mzc2ODU0OSAwLjkzNzY4NTQ5IDAuODk2MDg0MzEAA</bytes>
+																				<bytes key="NSRGB">MC45Mzc2ODU0ODk3IDAuOTM3Njg1NDg5NyAwLjg5NjA4NDMwODYAA</bytes>
 																			</object>
 																			<object class="NSColor" key="NSGridColor">
 																				<int key="NSColorSpace">1</int>
@@ -681,7 +681,7 @@
 																	<reference key="NSSuperview" ref="905143276"/>
 																	<reference key="NSTarget" ref="905143276"/>
 																	<string key="NSAction">_doScroller:</string>
-																	<double key="NSPercent">0.9915254</double>
+																	<double key="NSPercent">0.99152541160583496</double>
 																</object>
 																<object class="NSScroller" id="1021062608">
 																	<reference key="NSNextResponder" ref="905143276"/>
@@ -691,7 +691,7 @@
 																	<int key="NSsFlags">1</int>
 																	<reference key="NSTarget" ref="905143276"/>
 																	<string key="NSAction">_doScroller:</string>
-																	<double key="NSPercent">0.99688480000000002</double>
+																	<double key="NSPercent">0.99688482284545898</double>
 																</object>
 																<object class="NSClipView" id="112146985">
 																	<reference key="NSNextResponder" ref="905143276"/>
@@ -878,23 +878,23 @@
 							<reference key="NSSuperview" ref="538557104"/>
 							<object class="NSColor" key="BWGBFillStartingColor">
 								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MC43MTU2NjA2NjQ1IDAuNzY0NTY2MzU4OSAwLjgxMDQ4Mzg3MQA</bytes>
+								<bytes key="NSRGB">MC43MTU2NjA2OTEzIDAuNzY0NTY2MzYxOSAwLjgxMDQ4Mzg3MjkAA</bytes>
 							</object>
 							<object class="NSColor" key="BWGBFillEndingColor">
 								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MC41MTM3NjcxODUyIDAuNTY4NDkwNTE3IDAuNjE3MzQ2OTM4OAA</bytes>
+								<bytes key="NSRGB">MC41MTM3NjcxODI4IDAuNTY4NDkwNTA1MiAwLjYxNzM0Njk0MjQAA</bytes>
 							</object>
 							<object class="NSColor" key="BWGBFillColor">
 								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MC44NzQ1MDk4MDM5IDAuODk0MTE3NjQ3MSAwLjkxNzY0NzA1ODgAA</bytes>
+								<bytes key="NSRGB">MC44NzQ1MDk4MTE0IDAuODk0MTE3NjUzNCAwLjkxNzY0NzA2MzcAA</bytes>
 							</object>
 							<object class="NSColor" key="BWGBTopBorderColor">
 								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MC41NTc2NjQ2NjM5IDAuNTk4ODkyNDg5OSAwLjY0Mjg1NzE0MjkAA</bytes>
+								<bytes key="NSRGB">MC41NTc2NjQ2OTI0IDAuNTk4ODkyNTA5OSAwLjY0Mjg1NzEzNDMAA</bytes>
 							</object>
 							<object class="NSColor" key="BWGBBottomBorderColor">
 								<int key="NSColorSpace">1</int>
-								<bytes key="NSRGB">MC40Mjc4NDM2NjA5IDAuNDc5NDI1MTUwOSAwLjUyMDQwODE2MzMAA</bytes>
+								<bytes key="NSRGB">MC40Mjc4NDM2NjAxIDAuNDc5NDI1MTYyMSAwLjUyMDQwODE1MzUAA</bytes>
 							</object>
 							<bool key="BWGBHasTopBorder">NO</bool>
 							<bool key="BWGBHasBottomBorder">YES</bool>
@@ -917,7 +917,7 @@
 								<reference key="NSBackgroundColor" ref="352831638"/>
 								<object class="NSColor" key="NSTextColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC42OTcwODAyOTIAA</bytes>
+									<bytes key="NSWhite">MC42OTcwODAzMTQyAA</bytes>
 								</object>
 							</object>
 						</object>
@@ -936,7 +936,7 @@
 								<reference key="NSBackgroundColor" ref="352831638"/>
 								<object class="NSColor" key="NSTextColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC42OTcwODAyOTIAA</bytes>
+									<bytes key="NSWhite">MC42OTcwODAzMTQyAA</bytes>
 								</object>
 							</object>
 						</object>
@@ -955,7 +955,7 @@
 								<reference key="NSBackgroundColor" ref="352831638"/>
 								<object class="NSColor" key="NSTextColor">
 									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC42OTcwODAyOTIAA</bytes>
+									<bytes key="NSWhite">MC42OTcwODAzMTQyAA</bytes>
 								</object>
 							</object>
 						</object>
@@ -965,7 +965,7 @@
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
 				<string key="NSMinSize">{500, 422}</string>
-				<string key="NSMaxSize">{1.79769e+308, 1.79769e+308}</string>
+				<string key="NSMaxSize">{3.40282e+38, 3.40282e+38}</string>
 				<string key="NSFrameAutosaveName">CommitSheetWindowFrame</string>
 			</object>
 		</object>
